# IntelliScraper

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: use_brightdata_proxy.py
intelliscraper/: __init__.py  enums.py  exception.py  html_parser.py  scraper.py  session.py  utils.py
intelliscraper/common/: models.py
intelliscraper/examples/: use_brightdata_proxy.py
intelliscraper/scripts/: get_session_data.py
scripts/: get_session_data.py
tests/: test_html_parser.py
