[project]
name = "intelliscraper"
version = "0.1.0"
description = "An AI Intelligent web scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "html-to-markdown>=1.16.0",
    "html5lib>=1.1",
    "playwright>=1.55.0",
    "pydantic>=2.11.10",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]

[project.scripts]
intelliscraper-session = "intelliscraper.scripts.get_session_data:main"
